--- a/backend/package.json
+++ b/backend/package.json
@@ -7,7 +7,9 @@
     "dev": "NODE_ENV='development' nodemon --ext ts --exec ts-node src/index.ts",
     "build": "tsc",
     "start": "NODE_ENV='production' node dist/index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "format:write": "prettier . --write",
+    "format:check": "prettier . --check"
   },
   "keywords": [],
   "author": "",
@@ -25,6 +27,7 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
+    "@ianvs/prettier-plugin-sort-imports": "^4.4.1",
     "@types/cookie-parser": "^1.4.8",
     "@types/cors": "^2.8.17",
     "@types/express": "4",
@@ -36,6 +39,7 @@
     "eslint": "^9.21.0",
     "globals": "^16.0.0",
     "nodemon": "^3.1.9",
+    "prettier": "3.5.3",
     "ts-node": "^10.9.2",
     "typescript-eslint": "^8.25.0"
   }
