--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
 	"dependencies": {
 		"@tailwindcss/vite": "^4.0.9",
 		"@tanstack/react-form": "0.45.1",
+		"@tanstack/react-query": "5.67.1",
 		"axios": "1.8.1",
 		"lucide-react": "0.476.0",
 		"react": "^19.0.0",
