--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,16 +12,27 @@
 		"format:check": "prettier . --check"
 	},
 	"dependencies": {
+		"@radix-ui/react-avatar": "^1.1.3",
+		"@radix-ui/react-collapsible": "^1.1.3",
+		"@radix-ui/react-dialog": "^1.1.6",
+		"@radix-ui/react-dropdown-menu": "^2.1.6",
+		"@radix-ui/react-separator": "^1.1.2",
+		"@radix-ui/react-slot": "^1.1.2",
+		"@radix-ui/react-tooltip": "^1.1.8",
 		"@tailwindcss/vite": "^4.0.9",
 		"@tanstack/react-form": "0.45.1",
 		"@tanstack/react-query": "5.67.1",
 		"axios": "1.8.1",
+		"class-variance-authority": "^0.7.1",
+		"clsx": "^2.1.1",
 		"lucide-react": "0.476.0",
 		"react": "^19.0.0",
 		"react-dom": "^19.0.0",
 		"react-hot-toast": "2.5.2",
 		"react-router": "7.2.0",
+		"tailwind-merge": "^3.0.2",
 		"tailwindcss": "^4.0.9",
+		"tailwindcss-animate": "^1.0.7",
 		"zod": "3.24.2"
 	},
 	"devDependencies": {
